style/добавить форму, адаптировать disconts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test-case</title>
   </head>
   <body class="body">
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__line header__line_first">
         <article class="header__group-geo">
           <button class="header__btn-geo btn">
@@ -124,7 +124,7 @@
           </span>
         </button>
       </div>
-    </header>
+    </header> -->
 
     <main class="main">
       <section class="slider">Слайдер</section>
@@ -288,13 +288,183 @@
               <span class="section__btn-with-icon-text">Все скидки</span>
             </button>
           </div>
+          <ul class="section__content-list section__content-list_discounts">
+            <li
+              class="section__content-list-element section__content-list-element_discount"
+            >
+              <article class="product-card">
+                <div class="product-card__shadow">
+                  <div class="product-card__layout">
+                    <div class="product-card__img-box">
+                      <label class="product-card__label">новинка</label>
+                      <img
+                        src="./assets/images/products/blue-paint.png"
+                        class="product-card__img"
+                      />
+                    </div>
+                    <p class="product-card__title">
+                      Benjamin Moore Regal Select 549 Waterborne Interior Paint
+                      Eggshell
+                    </p>
+                    <p class="product-card__tth-list">
+                      <span class="product-card__tth-element">0.95 л</span>
+                      <span class="product-card__tth-separator"></span>
+                      <span class="product-card__tth-element">2 л</span>
+                    </p>
+                    <p class="product-card__price-container">
+                      <span class="product-card__new-price">от 3600 ₽</span>
+                      <span class="product-card__old-price">4500 ₽</span>
+                    </p>
+                  </div>
+                </div>
+                <button class="product-card__btn btn"></button>
+              </article>
+            </li>
+            <li
+              class="section__content-list-element section__content-list-element_discount"
+            >
+              <article class="product-card">
+                <div class="product-card__shadow">
+                  <div class="product-card__layout">
+                    <div class="product-card__img-box">
+                      <label class="product-card__label">новинка</label>
+                      <img
+                        src="./assets/images/products/pink-paint.png"
+                        class="product-card__img"
+                      />
+                    </div>
+                    <p class="product-card__title">
+                      Benjamin Moore Regal Select 549 Waterborne Interior Paint
+                      Eggshell
+                    </p>
+                    <p class="product-card__tth-list">
+                      <span class="product-card__tth-element">0.95 л</span>
+                      <span class="product-card__tth-separator"></span>
+                      <span class="product-card__tth-element">2 л</span>
+                    </p>
+                    <p class="product-card__price-container">
+                      <span class="product-card__new-price">от 5200 ₽</span>
+                      <span class="product-card__old-price">5720 ₽</span>
+                    </p>
+                  </div>
+                </div>
+                <button class="product-card__btn btn"></button>
+              </article>
+            </li>
+            <li
+              class="section__content-list-element section__content-list-element_discount"
+            >
+              <article class="product-card">
+                <div class="product-card__shadow">
+                  <div class="product-card__layout">
+                    <div class="product-card__img-box">
+                      <label class="product-card__label">новинка</label>
+                      <img
+                        src="./assets/images/products/blue-paint.png"
+                        class="product-card__img"
+                      />
+                    </div>
+                    <p class="product-card__title">
+                      Benjamin Moore Regal Select 549 Waterborne Interior Paint
+                      Eggshell
+                    </p>
+                    <p class="product-card__tth-list">
+                      <span class="product-card__tth-element">0.95 л</span>
+                      <span class="product-card__tth-separator"></span>
+                      <span class="product-card__tth-element">2 л</span>
+                    </p>
+                    <p class="product-card__price-container">
+                      <span class="product-card__new-price">от 3600 ₽</span>
+                      <span class="product-card__old-price">4500 ₽</span>
+                    </p>
+                  </div>
+                </div>
+                <button class="product-card__btn btn"></button>
+              </article>
+            </li>
+            <li
+              class="section__content-list-element section__content-list-element_discount"
+            >
+              <article class="product-card">
+                <div class="product-card__shadow">
+                  <div class="product-card__layout">
+                    <div class="product-card__img-box">
+                      <label class="product-card__label">новинка</label>
+                      <img
+                        src="./assets/images/products/pink-paint.png"
+                        class="product-card__img"
+                      />
+                    </div>
+                    <p class="product-card__title">
+                      Benjamin Moore Regal Select 549 Waterborne Interior Paint
+                      Eggshell
+                    </p>
+                    <p class="product-card__tth-list">
+                      <span class="product-card__tth-element">0.95 л</span>
+                      <span class="product-card__tth-separator"></span>
+                      <span class="product-card__tth-element">2 л</span>
+                    </p>
+                    <p class="product-card__price-container">
+                      <span class="product-card__new-price">от 5200 ₽</span>
+                      <span class="product-card__old-price">5720 ₽</span>
+                    </p>
+                  </div>
+                </div>
+                <button class="product-card__btn btn"></button>
+              </article>
+            </li>
+          </ul>
         </section>
 
-        <section class="form-contact">Форма</section>
+        <section class="section section_form">
+          <div class="section__img-container">
+            <img class="section__img" src="./assets/images/form/paints.png" />
+          </div>
+          <div class="section__form-container">
+            <form class="form">
+              <p class="form__title">Нужна консультация?</p>
+              <p class="form__subtitle">
+                Оставьте свои данные, и мы перезвоним вам в ближайшее время
+              </p>
+              <div class="form__input-container">
+                <div class="form__input-block form__input-block_profile">
+                  <input
+                    class="form__input"
+                    placeholder="Ваше имя"
+                    type="text"
+                  />
+                </div>
+                <span class="form__input-err"></span>
+              </div>
+              <div class="form__input-container">
+                <div class="form__input-block form__input-block_phone">
+                  <input
+                    class="form__input"
+                    placeholder="Номер телефона"
+                    type="tel"
+                  />
+                </div>
+                <span class="form__input-err"></span>
+              </div>
+              <div class="form__submit-line">
+                <p class="form__submit-text">
+                  Нажимая на кнопку «Отправить», Вы принимаете условия
+                  <span class="form__text-underline">Соглашения</span>
+                </p>
+                <button
+                  class="section__btn-with-icon btn form__submit-btn"
+                  type="submit"
+                >
+                  <span class="section__btn-with-icon-text">Отправить</span>
+                </button>
+              </div>
+            </form>
+          </div>
+        </section>
       </div>
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__content">
         <div class="footer__column footer__column_first">
           <img
@@ -412,6 +582,6 @@
       <p class="footer__signature">
         © 2023 Интернет-магазин лакокрасочной продукции
       </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
